Fix carousel overflow being visible

--- a/sass/_carousel.scss
+++ b/sass/_carousel.scss
@@ -21,6 +21,7 @@ $light-grey: #DCDCDC;
 
 .carousel {
 	background-color: #FFF;
+	overflow: hidden;
 	padding: 0 16px;
 	position: relative;
 }
